Fixed issue with jumbotron header not centered vertically

--- a/css/main.css
+++ b/css/main.css
@@ -321,6 +321,7 @@ form.primary-engagement p.webdev-cta {
   -o-transform: translateX(-50%) translateY(-50%);
   transform: translateX(-50%) translateY(-50%);
   color: #fff;
+  margin: 0;
   text-shadow: 0px 0px 4px #000;
   font-size: 60px;
 }
