--- a/less/app/webdev-jumbotron.less
+++ b/less/app/webdev-jumbotron.less
@@ -15,6 +15,7 @@
 		     -o-transform: translateX(-50%) translateY(-50%);
 		        transform: translateX(-50%) translateY(-50%);
 	    color: #fff;
+	    margin: 0;
 	    text-shadow: 0px 0px 4px #000;
 	    font-size: 60px;
 	}
